--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,13 +6,13 @@ jdbc_username=root
 jdbc_password=hust-ibm
 
 #file directory
-studentPhoto=D:/workspace/bigdataplatform_set/file/studentPhoto/
-teacherPhoto=D:/workspace/bigdataplatform_set/file/teacherPhoto/
-coursePhoto=D:/workspace/bigdataplatform_set/file/coursePhoto/
+student_photo=D:/workspace/bigdataplatform_set/file/studentPhoto/
+teacher_photo=D:/workspace/bigdataplatform_set/file/teacherPhoto/
+course_photo=D:/workspace/bigdataplatform_set/file/coursePhoto/
 courseware=D:/workspace/bigdataplatform_set/file/courseware/
-courseVideo=D:/workspace/bigdataplatform_set/file/courseVideo/ 
-experimentVideo=D:/workspace/bigdataplatform_set/file/experimentVideo/
-experimentReport=D:/workspace/bigdataplatform_set/file/experimentReport/
-experimentDataSubmit=D:/workspace/bigdataplatform_set/file/experimentDataSubmit/
-reportSubmit=D:/workspace/bigdataplatform_set/file/reportSubmit/
+course_video=D:/workspace/bigdataplatform_set/file/courseVideo/ 
+experiment_video=D:/workspace/bigdataplatform_set/file/experimentVideo/
+experiment_report=D:/workspace/bigdataplatform_set/file/experimentReport/
+experiment_data_submit=D:/workspace/bigdataplatform_set/file/experimentDataSubmit/
+report_submit=D:/workspace/bigdataplatform_set/file/reportSubmit/
 
