完成课件实验缩略图

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,13 +6,14 @@ jdbc_username=root
 jdbc_password=hust-ibm
 
 #file directory
-student_photo=D:/workspace/bigdataplatform_set/file/studentPhoto/
-teacher_photo=D:/workspace/bigdataplatform_set/file/teacherPhoto/
-course_photo=D:/workspace/bigdataplatform_set/file/coursePhoto/
-courseware=D:/workspace/bigdataplatform_set/file/courseware/
-course_video=D:/workspace/bigdataplatform_set/file/courseVideo/ 
-experiment_video=D:/workspace/bigdataplatform_set/file/experimentVideo/
-experiment_report=D:/workspace/bigdataplatform_set/file/experimentReport/
-experiment_data_submit=D:/workspace/bigdataplatform_set/file/experimentDataSubmit/
-report_submit=D:/workspace/bigdataplatform_set/file/reportSubmit/
+student_photo=D:/workspace/bigdataplatform_set/studentPhoto/
+teacher_photo=D:/workspace/bigdataplatform_set/teacherPhoto/
+course_photo=D:/workspace/bigdataplatform_set/coursePhoto/
+courseware=D:/workspace/bigdataplatform_set/courseware/
+course_video=D:/workspace/bigdataplatform_set/courseVideo/
+#experiment_video=D:/workspace/bigdataplatform_set/file/experimentVideo/
+#experiment_report=D:/workspace/bigdataplatform_set/file/experimentReport/
+file=D:/workspace/bigdataplatform_set/file/
+experiment_data_submit=D:/workspace/bigdataplatform_set/experimentDataSubmit/
+report_submit=D:/workspace/bigdataplatform_set/reportSubmit/
 
