已修复 上传学生名单学院无法读取和无法删除学生 两个BUG

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,7 +3,7 @@ driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 jdbc_url=jdbc:mysql://localhost:3306/db_bigdataplatform?characterEncoding=UTF-8
 jdbc_username=root
-jdbc_password=hust-ibm
+jdbc_password=root
 
 #file directory
 student_photo=D:/workspace/bigdataplatform_set/studentPhoto/
